fixed buggy bg on mobile

--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ body {
     user-select: none;
 }
 
+.stuff {
+    background: #f0f0f0;
+}
+
 .fa-bars,
 .fa-times {
     position: absolute;
     margin: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-}
-
-.section {
-    background: #f0f0f0;
 }
 
 .hero h1, 
